test/visibility/scoping-shadows-error-message.good
scoping-shadows-error-message.chpl:11: error: 'a' used before defined (first used here, defined at line 12)
